--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "lint:style": "stylelint --fix 'src/**/*.{css,scss}'",
     "fmt": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,scss}'",
     "fix": "yarn fmt && yarn lint:es && yarn lint:style",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
@@ -68,7 +70,18 @@
           "alwaysTryTypes": true
         }
       }
-    }
+    },
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-default-export": "off",
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
   },
   "stylelint": {
     "extends": [
@@ -89,6 +102,17 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.5.5",
+    "@storybook/addon-essentials": "^6.5.5",
+    "@storybook/addon-interactions": "^6.5.5",
+    "@storybook/addon-links": "^6.5.5",
+    "@storybook/builder-webpack5": "^6.5.5",
+    "@storybook/manager-webpack5": "^6.5.5",
+    "@storybook/node-logger": "^6.5.5",
+    "@storybook/preset-create-react-app": "^4.1.1",
+    "@storybook/react": "^6.5.5",
+    "@storybook/testing-library": "^0.0.11",
+    "babel-plugin-named-exports-order": "^0.0.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
@@ -96,9 +120,11 @@
     "husky": "^8.0.0",
     "lint-staged": "^12.4.2",
     "prettier": "^2.6.2",
+    "prop-types": "^15.8.1",
     "stylelint": "^14.8.5",
     "stylelint-config-prettier-scss": "^0.0.1",
-    "stylelint-config-standard-scss": "^4.0.0"
+    "stylelint-config-standard-scss": "^4.0.0",
+    "webpack": "^5.72.1"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
