--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "npm": "Not allowed. Please use Yarn instead."
   },
   "dependencies": {
+    "@js-temporal/polyfill": "^0.4.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
